stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: ---

Resources:
  SgVpn:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: vpn_sg
      GroupDescription: "security group que permite entrada " 
      VpcId: vpc-03e3b758fa0abffc1
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 
        - IpProtocol: udp
          FromPort: 51820
          ToPort: 51820
          CidrIp: 0.0.0.0/0 
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
  
  Ec2Vpn:
    Type: "AWS::EC2::Instance"
    Properties:
      KeyName: vpn
      ImageId: ami-098940df4d3292e9a
      InstanceType: t2.micro
      SecurityGroupIds:
        - Ref: SgVpn
      UserData: 
        Fn::Base64: |
          #!/bin/bash -ex
          yum update -y
          yum install docker -y
          systemctl start docker
          systemctl enable docker
          # curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          # chmod +x /usr/local/bin/docker-compose
          docker run -d \
          --name=wireguard \
          --cap-add=NET_ADMIN \
          --cap-add=SYS_MODULE `#optional` \
          -e PUID=1000 \
          -e PGID=1000 \
          -e TZ=Etc/UTC \
          -e SERVERPORT=51820 `#optional` \
          -e PEERS=1 `#optional` \
          -e PEERDNS=auto `#optional` \
          -e INTERNAL_SUBNET=10.13.13.0 `#optional` \
          -e ALLOWEDIPS=0.0.0.0/0 `#optional` \
          -e PERSISTENTKEEPALIVE_PEERS= `#optional` \
          -e LOG_CONFS=true `#optional` \
          -p 51820:51820/udp \
          -v /home/wireguard/config:/config \
          -v /lib/modules:/lib/modules `#optional` \
          --sysctl="net.ipv4.conf.all.src_valid_mark=1" \
          --restart unless-stopped \
          lscr.io/linuxserver/wireguard:latest

Outputs:
  Ipserver:
    Description: Information about the value
    Value: Value to return
    Export:
      Name: Name of resource to export


#scp -i vpn.pem ec2-user@52.195.152.243:/home/wireguard/config/peer1/peer1.conf .
